--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/socialite": "^5.9",
         "laravel/tinker": "^2.5",
         "nesbot/carbon": "^2.70",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.11",
         "twilio/sdk": "^7.9",
         "tymon/jwt-auth": "^1.0@dev"
